--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -8,11 +8,11 @@ html {
 }
 body {
 	font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
-    width: 800px;
-    margin: 0 auto;
-    border: 3px solid #800000;
-    background-color: #fffded;
+	font-size: 100%;
+	width: 800px;
+	margin: 0 auto;
+	border: 3px solid #800000;
+	background-color: #fffded;
 }
 a:focus, a:hover {
 	font-style: italic;
@@ -47,40 +47,45 @@ header img {
 }
 /* the styles for the form */
 fieldset {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    padding-top: .5em;
+	margin-bottom: .5em;
+	padding-top: .5em;
+	padding-bottom: .5em;
+	padding-left: 1em;
+	padding-right: 1em;
 }
 legend {
-    color: #931420;
-    font-weight: bold;
-    font-size: 85%;
-    margin-bottom: .5em;
+	color: black;
+	font-weight: bold;
+	font-size: 85%;
+	margin-bottom: .5em;
 }
 label {
-    float: left;
-    width: 12em;
-    text-align: right;
+	float: left;
+	width: 12em;
+	text-align: right;
 }
 label, input, select {
 	font-size: 90%;
 }
 input, select {
-    width: 15em;
-    margin-left: .5em;
-    margin-bottom: .5em;
+	width: 15em;
+	margin-left: .5em;
+	margin-bottom: .5em;
 }
 input:required, input[required] {
-	border: 3px solid red;
+	border: 2px solid red;
+	color: #800000;
 }
 input:valid {
 	border: 1px solid black;
 }
 input:invalid {
+	border: 2px solid red;
+	color: #800000;
 	box-shadow: none;
 }
 br {
-    clear: both;
+	clear: both;
 }
 #buttons input {
 	width: 10em;
@@ -96,22 +101,22 @@ br {
 	float: left;
 }
 #nav_menu ul li a {
-    display: block;
-    width: 160px;
-    text-align: center;
-    padding: 1em 0;
-    text-decoration: none;
-    background-color: #800000;
-    color: white;
-    font-weight: bold;
+	display: block;
+	width: 160px;
+	text-align: center;
+	padding: 1em 0;
+	text-decoration: none;
+	background-color: #800000;
+	color: white;
+	font-weight: bold;
 }
 #nav_menu a.current {
 	color: yellow;
 }
 #nav_menu ul ul {
-    display: none;
-    position: absolute;
-    top: 100%;
+	display: none;
+	position: absolute;
+	top: 100%;
 }
 #nav_menu ul ul li {
 	float: none;
@@ -120,9 +125,9 @@ br {
 	display: block;
 }
 #nav_menu > ul::after {
-    content: "";
-    clear: both;
-    display: block;
+	content: "";
+	clear: both;
+	display: block;
 }
 
 /* the styles for the main content */
