--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -90,6 +90,10 @@ br {
 #buttons input {
 	width: 10em;
 }
+#payment, #Credit1 {
+	width: auto;
+	margin-left: 3em;
+}
 /* the styles for the navigation menu */
 #nav_menu ul {
 	list-style-type: none;
