--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -102,6 +102,12 @@ br {
 	align-items: center;
 	gap: 1em;
 }
+#months{
+	width: 7em;
+}
+#year{
+	width: 5em;
+}
 /* the styles for the navigation menu */
 #nav_menu ul {
 	list-style-type: none;
