--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -93,6 +93,10 @@ br {
 #payment label{
 	float: none;
 }
+#payment input [type="radio"]{
+	width: auto;
+	margin-left: 3em;
+}
 #Bill1{
 	margin-left: 3em;
 	width: auto;
